add section banner

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
    <link rel="stylesheet" href="./css/reset.css">
    <link rel="stylesheet" href="./css/normalize.css">
    <link rel="stylesheet" href="./css/base.css">
-   <link rel="stylesheet" href="./css/header.css">
-   <link rel="stylesheet" href="./css/header_navigation.css">
+   <link rel="stylesheet" href="./css/header/header.css">
+   <link rel="stylesheet" href="./css/header/header_navigation.css">
+   <link rel="stylesheet" href="./css/banner.css">
 </head>
 <body>
-   <header class="header">
+   <header class="header container">
       <a href="https://github.com/FernandoChurros" target="_blank">
          <img class="header_logo" src="./assets/logo.png" alt="Fernando Churros">
       </a>
@@ -28,5 +29,13 @@
          <a class="navigation_link" href="#contato">Contato</a>
       </nav>
    </header>
+
+   <main>
+      <section class="banner container">
+         <div class="banner_wrapper">
+            <h1>O Cowboy do Front-End</h1>
+         </div>
+      </section>
+   </main>
 </body>
 </html>
