add script show link banner

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
    <main>
       <section class="banner container">
          <div class="banner_wrapper">
-            <h1>O Cowboy do Front-End</h1>
+            <h1 class="cowboy">O Cowboy do Front-End</h1>
+            <a href="https://twitter.com/FernandoChurros" class="link_tt fernando" target="_blank">Fernando Churros</a> 
          </div>
       </section>
    </main>
+
+   <script src="./scripts/teste.js"></script>
 </body>
 </html>
