refactory script show link banner

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <section class="banner container">
          <div class="banner_wrapper">
             <h1 class="cowboy">O Cowboy do Front-End</h1>
-            <a href="https://twitter.com/FernandoChurros" class="link_tt fernando" target="_blank">Fernando Churros</a> 
+            <a class="link_tt fernando" href="https://twitter.com/FernandoChurros" target="_blank">Fernando Churros</a> 
          </div>
       </section>
    </main>
 
-   <script src="./scripts/teste.js"></script>
+   <script src="./scripts/show-link-banner.js"></script>
 </body>
 </html>
